src/Components/DetailedView/CastCard/CastCard.module.css
.castCards {
  display: flex;
  position: relative;
  align-items: center;
  overflow: scroll;
  width: 100%;
  max-width: 1000px;
  margin: 16px 0;
}

.castCards img {
  width: 125px;
  mask-image: linear-gradient(rgba(0, 0, 0, 1), transparent);
}

.card {
  min-width: 125px;
  max-width: 125px;
  display: flex;
  flex-direction: column;
  text-align: center;
  margin: 8px;
  text-decoration: none;
  border: 1px solid var(--border);
  border-radius: 30px;
  overflow: hidden;
}

.card p {
  color: var(--text);
  padding: 0 8px;
}

.card .name {
  margin: 0;
}

.card .character {
  font-size: 14px;
  color: #a7a7a7;
}

@media (max-width: 735px) {
  .castCards img {
    min-width: 100px;
    max-width: 125px;
  }

  .card {
    width: 100px;
  }
}

